@@ -39,6 +39,7 @@
  * #1510 (ot.Ceres('LEVENBERG_MARQUARDT') and ot.Ceres('DOGLEG') do not handle bound constraints)
  * #1520 (The NLopt test is dubious)
  * #1521 (Basis of MonomialFunction)
+ * #1540 (SubsetSampling: incorrect event sample)
 
 
 == 1.15 release (2020-05-25) == #release-1.15
